Self control problems. Triple integrals on m-le sets

--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/Triple/triple.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/Triple/triple.tex
@@ -3,38 +3,38 @@
 
 Якщо ви правильно зробили завдання  (\ref{problem:measurable_sets:self_control:triple:reduction}), то в завданні (\ref{problem:measurable_sets:self_control:triple:inner}) ви побачите внутрішні інтеграли з отриманих вами потрійних.
 
-Якщо ви правильно зробили завдання  (\ref{problem:measurable_sets:self_control:triple:inner}), то в завданні (\ref{problem:measurable_sets:self_control:triple:middle}) ви побачите інтеграли від отриманих вами функцій, а межі інтегрування відповідатимуть межам у відповіному інтегралі з отриманним вами в завданні (\ref{problem:measurable_sets:self_control:triple:reduction} повторних інтегралів.
+Якщо ви правильно зробили завдання  (\ref{problem:measurable_sets:self_control:triple:inner}), то в завданні (\ref{problem:measurable_sets:self_control:triple:middle}) ви побачите інтеграли від отриманих вами функцій, а межі інтегрування відповідатимуть межам у відповіному інтегралі з отриманним вами в завданні (\ref{problem:measurable_sets:self_control:triple:reduction}) повторних інтегралів.
 
-Так само, якщо ви правильно зробили завдання  (\ref{problem:measurable_sets:self_control:triple:middle}), то в завданні (\ref{problem:measurable_sets:self_control:triple:outer}) ви побачите інтеграли від отриманих вами функцій, а межі інтегрування відповідатимуть межам у відповіному інтегралі з отриманним вами в завданні (\ref{problem:measurable_sets:self_control:triple:reduction} повторних інтегралів.
+Так само, якщо ви правильно зробили завдання  (\ref{problem:measurable_sets:self_control:triple:middle}), то в завданні (\ref{problem:measurable_sets:self_control:triple:outer}) ви побачите інтеграли від отриманих вами функцій, а межі інтегрування відповідатимуть межам у відповіному інтегралі з отриманним вами в завданні (\ref{problem:measurable_sets:self_control:triple:reduction}) повторних інтегралів.
 
 Відповіді на завдання (\ref{problem:measurable_sets:self_control:triple:outer}) будуть значеннями відповідних потрійних інтегралів, наведених в завданні (\ref{problem:measurable_sets:self_control:triple:reduction}), а також тих повторних інтегралів, які ви повинні отримати при виконанні завдання (\ref{problem:measurable_sets:self_control:triple:reduction}).
 \begin{enumerate}
-\item\label{problem:measurable_sets:self_control:triple:reduction} Зведіть наступні потрійні інтеграли до повторних таким чином, щоб в повторному інтегралі інтегрування відбувалось спочатку по $y$, потім по $x$, а в кінці по $z$.
+\item\label{problem:measurable_sets:self_control:triple:reduction} Зведіть наступні потрійні інтеграли до повторних.
     \begin{enumerate}[label*=\arabic*.]
-        \item $\iiint\limits_D z \,dx\,dy\,dz$, де $D$ --- прямокутний паралелепіпед, обмежений площинами $x = 0$, $y = 0$, $z = 0$, $x = 1$, $y = 2$, $z = 3$.
-        \item  $\iiint\limits_{V} \left(x^2 + y^2 + z^2\right) \, dx \, dy \, dz$, де $V$ --- прямокутний паралелепіпед, обмежений площинами $x = 0$, $y = 0$, $z = 0$, $x = 2$, $y = 3$, $z = 4$.
-        \item $\iiint\limits_{W} 8 z^{2} x {\mathrm e}^{2 x y z} \, dx \, dy \, dz$, де $W$ --- прямокутний паралелепіпед з вершинами $(0,0,0)$, $(1,0,0)$, $(0,2,0)$, $(0,0,3)$.
-        \item $\iiint\limits_{D} \left(x + 2y + 3z\right) \, dx \, dy \, dz$, де $D$ --- прямокутний паралелепіпед, заданий нерівностями $0 \leq x \leq 2$, $1 \leq y \leq 4$, $2 \leq z \leq 5$.
-        \item  $\iiint\limits_{P} x z^{2} \cos\left(x y z\right) \, dx \, dy \, dz$, де $P$ --- прямокутний паралелепіпед, визначений координатами $(0,0,0)$, $(1,0,0)$, $(0,\pi,0)$, $(0,0,3)$.
-        \item $\iiint\limits_{R} \left(3x + y^2 + 2z\right) \, dx \, dy \, dz$, де $R$ --- прямокутний паралелепіпед, у якому $0 \leq x \leq 1$, $0 \leq y \leq 2$, $0 \leq z \leq 3$.
-        \item $\iiint\limits_{S} \left(xy + 2yz + 3zx\right) \, dx \, dy \, dz$, де $S$ --- прямокутний паралелепіпед, обмежений площинами $x = 0$, $y = 0$, $z = 0$, $x = 3$, $y = 2$, $z = 1$.
-        \item $\iiint\limits_{T} \frac{1}{xyz} \, dx \, dy \, dz$, де $T$ --- прямокутний паралелепіпед, визначений нерівностями $1 \leq x \leq 2$, $2 \leq y \leq 4$, $3 \leq z \leq 5$.
-        \item $\iiint\limits_{U} \left(x^3 + y^3 + z^3\right) \, dx \, dy \, dz$, де $U$ --- прямокутний паралелепіпед, з вершинами $(0,0,0)$, $(1,0,0)$, $(0,1,0)$, $(0,0,1)$.
-        \item  $\iiint\limits_{V} \left(2xy + z^2\right) \, dx \, dy \, dz$, де $V$ --- прямокутний паралелепіпед, описаний площинами $x = 0$, $y = 0$, $z = 0$, $x = 2$, $y = 1$, $z = 3$.
+        \item $\iiint\limits_D x \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = 3 x}$, ${y = 0}$, ${x = 1}$, ${z = x y}$, ${z = 0}$.
+        \item $\iiint\limits_D \frac{1}{\left(1+\frac{x}{2}+\frac{y}{3}+\frac{z}{5}\right)^{4}} \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${x = 0}$, ${y = 0}$, ${z = 0}$, ${\frac{x}{2}+\frac{y}{3}+\frac{z}{5} = 1}$.
+        \item $\iiint\limits_D 15\left(y^{2}+z^{2}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${x = 0}$, ${y = 0}$, ${z = 0}$, ${z = x + y}$, ${x + y = 1}$.
+        \item $\iiint\limits_D \left(3x+4y\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = 5\left(x^2 + y^2 \right)}$, ${z = 0}$.
+        \item $\iiint\limits_D \left(1+2x^{3}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = 4 x}$, ${y = 0}$, ${x = 1}$, ${z = \sqrt{x y}}$, ${z = 0}$.
+        \item $\iiint\limits_D \left(1+2\sqrt{y}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = \sqrt{x y}}$, ${z = 0}$.
+        \item $\iiint\limits_D \left(5x+\frac{3z}{2}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = x^2 + 15y^2}$, ${z = 0}$.
+        \item $\iiint\limits_D x y z \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями  ${x = 0}$, ${y = 0}$, ${z = 0}$, ${x + y + z = 1}$.
+        \item $\iiint\limits_D x \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${x = 0}$, ${x = 2}$, ${y = 0}$, ${y = 2\sqrt{x}}$,  ${z = \sqrt{\frac{4 x - y^2}{2}}}$, ${z = 0}$.
+        \item $\iiint\limits_D x y^{2} z^{3} \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями  ${y = 0}$, ${x = 1}$, ${y = x}$, ${z = {x y}}$, ${z = 0}$.
     \end{enumerate}
-\item \label{problem:measurable_sets:self_control:triple:inner}Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви знаходите внутрішні інтеграли з відповідей на попереднє завдання, а також не те, що відповіді на це завдання можуть залежати від $x$ та від $z$.
+\item \label{problem:measurable_sets:self_control:triple:inner}Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви знаходите внутрішні інтеграли з відповідей на попереднє завдання, а також не те, що відповіді на це завдання можуть залежати від $x$ та від $y$.
 \begin{multicols}{2}
     \begin{enumerate}[label*=\arabic*.]
-        \item $\int\limits_0^2 z \,dy$.
-        \item $\int\limits_0^3 \left(x^2 + y^2 + z^2\right) \,dy$.
-        \item $\int\limits_0^2 8 z^{2} x {\mathrm e}^{{2}{}{x}{}{y}{}{z}} \,dy$.
-        \item $\int\limits_1^4 \left(x + 2y + 3z\right) \,dy$.
-        \item $\int\limits_0^\pi {x}{}{z^{{2}}}{}{\cos}{\left({x}{}{y}{}{z}\right)} \,dy$.
-        \item $\int\limits_0^2 \left(3x + y^2 + 2z\right) \,dy$.
-        \item $\int\limits_0^2 \left(xy + 2yz + 3zx\right) \,dy$.
-        \item $\int\limits_2^4 \frac{1}{xyz} \,dy$.
-        \item $\int\limits_0^1 \left(x^3 + y^3 + z^3\right) \,dy$.
-        \item $\int\limits_0^1 \left(2xy + z^2\right) \,dy$.
+        \item $\int\limits_{0}^{x y}xd z$.
+        \item $\int\limits_{0}^{5-\frac{5 x}{2}-\frac{5 y}{3}}\frac{1}{\left(1+\frac{x}{2}+\frac{y}{3}+\frac{z}{5}\right)^{4}}d z$.
+        \item $\int\limits_{0}^{x+y}\left(15 y^{2}+15 z^{2}\right)d z$.
+        \item $\int\limits_{0}^{5 x^{2}+5 y^{2}}\left(3 x+4 y\right)d z$.
+        \item $\int\limits_{0}^{\sqrt{x y}}\left(2 x^{3}+1\right)d z$.
+        \item $\int\limits_{0}^{\sqrt{x y}}\left(1+2 \mathrm{\sqrt{y}}\right)d z$.
+        \item $\int\limits_{0}^{x^{2}+15 y^{2}}\left(5 x+\frac{3 z}{2}\right)d z$.
+        \item $\int\limits_{0}^{1-x-y} x y z d z$.
+        \item $\int\limits_{0}^{\sqrt{\frac{4 x - y^2}{2}}}xd z$.
+        \item $\int\limits_{0}^{x y}x \,y^{2} z^{3}d z$.
     \end{enumerate}
 \end{multicols}
 \item\label{problem:measurable_sets:self_control:triple:middle} Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви інтегруєте функціїї, що є відповідями на попереднє завдання, а межі інтегрування збігаються з межами відповідних повторних інтегралів з відповідей на задвання (\ref{problem:measurable_sets:self_control:triple:reduction}). Отримані вами функції можуть залежати від $x$.
