Integrals on measurable sets
Answers to self-control problems

--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Answers/Triple/triple.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Answers/Triple/triple.tex
@@ -3,61 +3,62 @@
     \item
         \begin{multicols}{2}
             \begin{enumerate}[label*=\arabic*.]
-                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^2 z \,dy\,dx\,dz$.
-                \item $\int\limits_0^4\int\limits_0^2\int\limits_0^3 (x^2 + y^2 + z^2) \,dy\,dx\,dz$.
-                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^2 8 z^{2} x {\mathrm e}^{2 x y z} \,dy\,dx\,dz$.
-                \item $\int\limits_2^5\int\limits_0^2\int\limits_1^4 (x + 2y + 3z) \,dy\,dx\,dz$.
-                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^\pi x z^{2} \cos\left(x y z\right) \,dy\,dx\,dz$.
-                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^2 (3x + y^2 + 2z) \,dy\,dx\,dz$.
-                \item $\int\limits_0^1\int\limits_0^3\int\limits_0^2 (xy + 2yz + 3zx) \,dy\,dx\,dz$.
-                \item $\int\limits_3^5\int\limits_1^2\int\limits_2^4 \frac{1}{xyz} \,dy\,dx\,dz$.
-                \item $\int\limits_0^1\int\limits_0^1\int\limits_0^1 (x^3 + y^3 + z^3) \,dy\,dx\,dz$.
-                \item $\int\limits_0^3\int\limits_0^2\int\limits_0^1 (2xy + z^2) \,dy\,dx\,dz$.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{3 x}   \int\limits_{0}^{x y}xd z d y d x $.
+                \item $\int\limits_{0}^{2}     \int\limits_{0}^{3-\frac{3 x}{2}}     \int\limits_{0}^{5-\frac{5 x}{2}-\frac{5 y}{3}}\frac{1}{\left(1+\frac{x}{2}+\frac{y}{3}+\frac{z}{5}\right)^{4}}d z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{1-x}      \int\limits_{0}^{x+y}3\left(y^{2}+ z^{2}\right)d z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{x}      \int\limits_{0}^{ x^{2}+ y^{2}}\left(3 x+4 y\right)d z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{4 x}     \int\limits_{0}^{\sqrt{x y}}\left(2 x^{3}+1\right)d z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{x}     \int\limits_{0}^{\sqrt{x y}}\left(1+2 {\sqrt{y}}\right)d z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{x}     \int\limits_{0}^{x^{2}+15 y^{2}}\left(5 x+\frac{3 z}{2}\right)d z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{1-x}     \int\limits_{0}^{1-x-y} x y z d z d y d x $.
+                \item $\int\limits_{0}^{2}     \int\limits_{0}^{2 {\sqrt{x}}}      \int\limits_{0}^{\sqrt{\frac{4 x - y^2}{2}}}xd z d y d x $.
+                \item $\int\limits_{0}^{1}     \int\limits_{0}^{x}  \int\limits_{0}^{x y}x \,y^{2} z^{3}d z d y d x $.
+            \end{enumerate}
+        \end{multicols}
+
+    \item
+        \begin{multicols}{2}
+            \begin{enumerate}[label*=\arabic*.]
+                 \item $x^{2} y$.
+                 \item $\left(\frac{360}{\left(3 x+2 y+6\right)^{3}} - \frac{5}{24}\right)$.
+                 \item $\left(x+y\right) \left(x^{2}+2 x y+4 y^{2}\right)$.
+                 \item $\left(x^{2}+y^{2}\right) \left(3 x+4 y\right)$.
+                 \item $\sqrt{x y} \left(2 x^{3} + 1\right)  $.
+                 \item $\left(\sqrt{x y}+2 {{y}}\, \sqrt{ x}\right)$.
+                 \item $\left(x^{2}+15 y^{2}\right)\left(5 x +\frac{3 \left(x^{2}+15 y^{2}\right)}{4}\right)$.
+                 \item $\frac{x y \left(1-x-y\right)^{2}}{2}$.
+                 \item $\frac{x \sqrt{8 x - 2 y^{2}}}{2}$.
+                 \item $\frac{x^{5} y^{6}}{4}$.
             \end{enumerate}
         \end{multicols}
     \item
         \begin{multicols}{2}
             \begin{enumerate}[label*=\arabic*.]
-                \item $2 z$.
-                \item $3 x^{2}+3 z^{2}+9$.
-                \item $-4 z+4 z {\mathrm e}^{4 x z}$.
-                \item $3 x+15+9 z$.
-                \item $\sin\! \left(x z \pi \right) z$.
-                \item $\frac{8}{3}+6 x+4 z$.
-                \item $6 z x+2 x+4 z$.
-                \item $\frac{\ln\! \left(2\right)}{x z}$.
-                \item $x^{3}+\frac{1}{4}+z^{3}$.
-                \item $z^{2}+x$.
+                \item $\frac{9 x^{4}}{2}$.
+                \item $\left(\frac{5 x}{16}-\frac{5}{4}+\frac{10}{\left(x+2\right)^{2}}\right)$.
+                \item $\left(-\frac{1}{2} x^{4}+\frac{3}{2} x^{2}-2 x+1\right)$.
+                \item $7 x^{4}$.
+                \item $\frac{16}{3}\left(2 x^{5} + x^{2}\right)$.
+                \item $\left(\frac{2 x^{2}}{3}+x^{\frac{5}{2}}\right)$.
+                \item $\left(42 x^{5}+30 x^{4}\right)$.
+                \item $\frac{x \left(x-1\right)^{4}}{24}$.
+                \item $\frac{\sqrt{2}\, \pi x^{2} }{2}$.
+                \item $\frac{x^{12}}{28}$.
             \end{enumerate}
         \end{multicols}
     \item
         \begin{multicols}{2}
             \begin{enumerate}[label*=\arabic*.]
-                \item $2 z$.
-                \item $6 z^{2}+26$.
-                \item $-1+{\mathrm e}^{4 z}-4 z$.
-                \item $36+18 z$.
-                \item $-\frac{-1+\cos\! \left(\pi  z\right)}{\pi}$.
-                \item $\frac{17}{3}+4 z$.
-                \item $39 z+9$.
-                \item $\frac{\ln\! \left(2\right)^{2}}{z}$.
-                \item $\frac{1}{2}+z^{3}$.
-                \item $2 z^{2}+2$.
-            \end{enumerate}
-        \end{multicols}
-    \item
-        \begin{multicols}{2}
-            \begin{enumerate}[label*=\arabic*.]
-                \item $9$.
-                \item $232$.
-                \item $-\frac{85}{4}+\frac{{\mathrm e}^{12}}{4}$.
-                \item $297$.
-                \item $\frac{3}{\pi}$.
-                \item $35$.
-                \item $\frac{57}{2}$.
-                \item $-\ln\! \left(3\right) \ln\! \left(2\right)^{2}+\ln\! \left(5\right) \ln\! \left(2\right)^{2}$.
-                \item $\frac{3}{4}$.
-                \item $24$.
+                \item $\frac{9}{10}$.
+                \item $\frac{5}{8}$.
+                \item $\frac{2}{5}$.
+                \item $\frac{7}{5}$.
+                \item $\frac{32}{9}$.
+                \item $\frac{32}{63}$.
+                \item $13$.
+                \item $\frac{1}{720}$.
+                \item $\frac{4 \sqrt{2}\, }{3}\pi$.
+                \item $\frac{1}{364}$.
             \end{enumerate}
         \end{multicols}
 \end{enumerate}
