--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/Triple/triple.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/Triple/triple.tex
@@ -13,8 +13,8 @@
     \begin{enumerate}[label*=\arabic*.]
         \item $\iiint\limits_D x \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = 3 x}$, ${y = 0}$, ${x = 1}$, ${z = x y}$, ${z = 0}$.
         \item $\iiint\limits_D \frac{1}{\left(1+\frac{x}{2}+\frac{y}{3}+\frac{z}{5}\right)^{4}} \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${x = 0}$, ${y = 0}$, ${z = 0}$, ${\frac{x}{2}+\frac{y}{3}+\frac{z}{5} = 1}$.
-        \item $\iiint\limits_D 15\left(y^{2}+z^{2}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${x = 0}$, ${y = 0}$, ${z = 0}$, ${z = x + y}$, ${x + y = 1}$.
-        \item $\iiint\limits_D \left(3x+4y\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = 5\left(x^2 + y^2 \right)}$, ${z = 0}$.
+        \item $\iiint\limits_D 3\left(y^{2}+z^{2}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${x = 0}$, ${y = 0}$, ${z = 0}$, ${z = x + y}$, ${x + y = 1}$.
+        \item $\iiint\limits_D \left(3x+4y\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = x^2 + y^2 }$, ${z = 0}$.
         \item $\iiint\limits_D \left(1+2x^{3}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = 4 x}$, ${y = 0}$, ${x = 1}$, ${z = \sqrt{x y}}$, ${z = 0}$.
         \item $\iiint\limits_D \left(1+2\sqrt{y}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = \sqrt{x y}}$, ${z = 0}$.
         \item $\iiint\limits_D \left(5x+\frac{3z}{2}\right) \,dx\,dy\,dz$, де $D$ --- область, обмежена поверхнями ${y = x}$, ${y = 0}$, ${x = 1}$, ${z = x^2 + 15y^2}$, ${z = 0}$.
@@ -27,10 +27,10 @@
     \begin{enumerate}[label*=\arabic*.]
         \item $\int\limits_{0}^{x y}xd z$.
         \item $\int\limits_{0}^{5-\frac{5 x}{2}-\frac{5 y}{3}}\frac{1}{\left(1+\frac{x}{2}+\frac{y}{3}+\frac{z}{5}\right)^{4}}d z$.
-        \item $\int\limits_{0}^{x+y}\left(15 y^{2}+15 z^{2}\right)d z$.
-        \item $\int\limits_{0}^{5 x^{2}+5 y^{2}}\left(3 x+4 y\right)d z$.
+        \item $\int\limits_{0}^{x+y}3\left(y^{2}+ z^{2}\right)d z$.
+        \item $\int\limits_{0}^{ x^{2}+ y^{2}}\left(3 x+4 y\right)d z$.
         \item $\int\limits_{0}^{\sqrt{x y}}\left(2 x^{3}+1\right)d z$.
-        \item $\int\limits_{0}^{\sqrt{x y}}\left(1+2 \mathrm{\sqrt{y}}\right)d z$.
+        \item $\int\limits_{0}^{\sqrt{x y}}\left(1+2 {\sqrt{y}}\right)d z$.
         \item $\int\limits_{0}^{x^{2}+15 y^{2}}\left(5 x+\frac{3 z}{2}\right)d z$.
         \item $\int\limits_{0}^{1-x-y} x y z d z$.
         \item $\int\limits_{0}^{\sqrt{\frac{4 x - y^2}{2}}}xd z$.
@@ -40,31 +40,31 @@
 \item\label{problem:measurable_sets:self_control:triple:middle} Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви інтегруєте функціїї, що є відповідями на попереднє завдання, а межі інтегрування збігаються з межами відповідних повторних інтегралів з відповідей на задвання (\ref{problem:measurable_sets:self_control:triple:reduction}). Отримані вами функції можуть залежати від $x$.
 \begin{multicols}{2}
     \begin{enumerate}[label*=\arabic*.]
-        \item $\int\limits_0^1 2z \,dx$.
-        \item $\int\limits_0^2 \left(3 x^{2}+3 z^{2}+9\right) \,dx$.
-        \item $\int\limits_0^1 \left(-4 z+4 z {\mathrm e}^{4 x z}\right) \,dx$.
-        \item $\int\limits_0^2 \left(3 x+15+9 z\right) \,dx$.
-        \item $\int\limits_0^1 {\sin}{\left(x z \pi \right)} {z} \,dx$.
-        \item $\int\limits_0^1 \left(\frac{8}{3}+6 x+4 z\right) \,dx$.
-        \item $\int\limits_0^3 \left(6 z x+2 x+4 z\right) \,dx$.
-        \item $\int\limits_1^2 \frac{\ln\! \left(2\right)}{x z} \,dx$.
-        \item $\int\limits_0^1 \left({x^{3}+\frac{1}{4}+z^{3}}\right) \,dx$.
-        \item $\int\limits_0^2 \left(z^{2}+x\right) \,dx$.
+        \item $\int\limits_{0}^{3 x}x^{2} yd y$.
+        \item $\int\limits_{0}^{3-\frac{3 x}{2}}\left(\frac{360}{\left(3 x+2 y+6\right)^{3}} - \frac{5}{24}\right)d y$.
+        \item $\int\limits_{0}^{1-x} \left(x+y\right) \left(x^{2}+2 x y+4 y^{2}\right)d y$.
+        \item $\int\limits_{0}^{x} \left(x^{2}+y^{2}\right) \left(3 x+4 y\right)d y$.
+        \item $\int\limits_{0}^{4 x} \sqrt{x y} \left(2 x^{3} + 1\right)  d y$.
+        \item $\int\limits_{0}^{x}\left(\sqrt{x y}+2 {{y}}\, \sqrt{ x}\right)d y$.
+        \item $\int\limits_{0}^{x}\left(x^{2}+15 y^{2}\right)\left(5 x +\frac{3 \left(x^{2}+15 y^{2}\right)}{4}\right)d y$.
+        \item $\int\limits_{0}^{1-x}\frac{x y \left(1-x-y\right)^{2}}{2}d y$.
+        \item $\int\limits_{0}^{2 {\sqrt{x}}}\frac{x \sqrt{8 x - 2 y^{2}}}{2}d y$.
+        \item $\int\limits_{0}^{x}\frac{x^{5} y^{6}}{4}d y$.
     \end{enumerate}
 \end{multicols}
 \item\label{problem:measurable_sets:self_control:triple:outer} Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви інтегруєте функціїї, що є відповідями на попереднє завдання, а межі інтегрування збігаються з межами відповідних повторних інтегралів з відповідей на задвання (\ref{problem:measurable_sets:self_control:triple:reduction}).
 \begin{multicols}{2}
     \begin{enumerate}[label*=\arabic*.]
-        \item $\int\limits_0^3 2z \,dz$.
-        \item $\int\limits_0^4 \left({6} {z^{2}}{+}{26}\right) \,dz$.
-        \item $\int\limits_0^3 \left(-1+{\mathrm e}^{4 z}-4z\right) \,dz$.
-        \item $\int\limits_2^5 \left(36 + 18 z\right) \,dz$.
-        \item $\int\limits_0^3 \dfrac{1 - \cos\! \left(\pi  z\right)}{\pi} \,dz$.
-        \item $\int\limits_0^3\left(\frac{17}{3}+4 z\right) \,dz$.
-        \item $\int\limits_0^1 \left({39} {z}{+}{9}\right) \,dz$.
-        \item $\int\limits_3^5 \frac{\ln\! \left(2\right)^{2}}{z} \,dz$.
-        \item $\int\limits_0^1 \left(\frac{1}{2}+z^{3}\right) \,dz$.
-        \item $\int\limits_0^3 \left({2} {z^{2}}{+}{2}\right) \,dz$.
+        \item $\int\limits_{0}^{1}\frac{9 x^{4}}{2}d x$.
+        \item $\int\limits_{0}^{2}\left(\frac{5 x}{16}-\frac{5}{4}+\frac{10}{\left(x+2\right)^{2}}\right)d x$.
+        \item $\int\limits_{0}^{1}\left(-\frac{1}{2} x^{4}+\frac{3}{2} x^{2}-2 x+1\right)d x$.
+        \item $\int\limits_{0}^{1}7 x^{4}d x$.
+        \item $\int\limits_{0}^{1}\frac{16}{3}\left(2 x^{5} + x^{2}\right)d x$.
+        \item $\int\limits_{0}^{1}\left(\frac{2 x^{2}}{3}+x^{\frac{5}{2}}\right)d x$.
+        \item $\int\limits_{0}^{1}\left(42 x^{5}+30 x^{4}\right)d x$.
+        \item $\int\limits_{0}^{1}\frac{x \left(x-1\right)^{4}}{24}d x$.
+        \item $\int\limits_{0}^{2}\frac{\sqrt{2}\, \pi x^{2} }{2}d x$.
+        \item $\int\limits_{0}^{1}\frac{x^{12}}{28}d x$.
     \end{enumerate}
 \end{multicols}
 \end{enumerate}
