Tasks for double integrals along measurable sets

--- a/Content/Integrals_On_Measurable_Sets/Tasks/tasks.tex
+++ b/Content/Integrals_On_Measurable_Sets/Tasks/tasks.tex
@@ -3,16 +3,14 @@
 \item  В цьому завданні потрібно знайти вказаний подвійний інтеграл по прямокутнику.
 \begin{enumerate}[label*=\arabic*.]
 \item Обчисліть ${{\iint\limits_R x^2y^2 \,dx\,dy}}$, де ${{R}}$ --- трикутник з вершинами ${(0,0)}$, ${(1,0)}$ та ${(0,1)}$.
-\item Знайдіть ${\iint\limits_D e^{xy} \,dx\,dy}$, де ${D}$ --- область між графіками функцій ${y = x^2}$ та ${y = 2x}$.
-\item Розрахуйте ${\iint\limits_R \sin(xy) \,dx\,dy}$, де ${R}$ --- область між кривими ${y = x^3}$ та ${y = x^2}$ в першому квадранті.
+\item Знайдіть ${\iint\limits_D \sqrt{xy} \,dx\,dy}$, де ${D}$ --- область між графіками функцій ${y = x^2}$ та ${y = 2x}$.
+\item Розрахуйте ${\iint\limits_R x\sin(xy) \,dx\,dy}$, де ${R}$ --- область між лініями ${y = \frac{\pi}{x}}$, ${y = 1}$, ${x = \frac{\pi}{2}}$ та ${x = \pi}$.
 \item Знайдіть ${\iint\limits_D (x^2 + y^2) \,dx\,dy}$, де ${D}$ --- область, обмежена кривими ${x = y^2}$ та ${x = 2-y^2}$.
-\item Обчисліть ${\iint\limits_R \frac{x}{y} \,dx\,dy}$, де ${R}$ --- область між параболою ${y = x^2}$ та прямою ${y = 2x}$.
-\item Знайдіть ${\iint\limits_D \sqrt{x+y} \,dx\,dy}$, де ${D}$ --- область, заключена між кривими ${y = x^2}$ і ${x = y^2}$.
-\item Розрахуйте ${\iint\limits_R \frac{x^2}{y} \,dx\,dy}$, де ${R}$ --- область між кривими ${y = x^3}$ та ${x = y^3}$.
+\item Знайдіть ${\iint\limits_D \left(\sqrt{x} + \sqrt{y}\right) \,dx\,dy}$, де ${D}$ --- область, заключена між кривими ${y = x^2}$ і ${x = y^2}$.
+\item Розрахуйте ${\iint\limits_R  (x +y)^{2} \,dx\,dy}$, де ${R}$ --- область між кривими ${y = x^3}$ та ${x = y^3}$.
   \item Знайдіть подвійний інтеграл: $\iint\limits_R x^2y\,dx\,dy$, де область $R$ --- трикутник з вершинами $(0,0)$, $(1,0)$ і $(1,2)$.
   \item Обчисліть: $\iint\limits_D e^{x+y}\,dx\,dy$, де область $D$ --- трикутник з вершинами $(0,0)$, $(2,0)$ і $(1,1)$.
   \item Знайдіть: $\iint\limits_R \sin(x+y)\,dx\,dy$, де область $R$ --- трикутник з вершинами $(0,0)$, $(\pi,0)$ і $(0,\pi)$.
-  \item Знайдіть: $\iint\limits_R x^2y^2\,dx\,dy$, де область $R$ --- обмежена параболами $y=x^2$ і $y=4x^2$.
   \item Обчисліть: $\iint\limits_D (x+y)^2\,dx\,dy$, де область $D$ --- трикутник з вершинами $(0,0)$, $(1,0)$ і $(1,1)$.
 \item
 \item
