Tasks for double integrals along measurable sets

--- a/Content/Integrals_On_Measurable_Sets/Tasks/tasks.tex
+++ b/Content/Integrals_On_Measurable_Sets/Tasks/tasks.tex
@@ -1,6 +1,6 @@
 \chapter{Задвання для самостійної роботи}
 \begin{enumerate}
-\item  В цьому завданні потрібно знайти вказаний подвійний інтеграл по прямокутнику.
+\item  В цьому завданні потрібно знайти вказаний подвійний інтеграл по вимірній множині.
 \begin{enumerate}[label*=\arabic*.]
 \item Обчисліть ${{\iint\limits_R x^2y^2 \,dx\,dy}}$, де ${{R}}$ --- трикутник з вершинами ${(0,0)}$, ${(1,0)}$ та ${(0,1)}$.
 \item Знайдіть ${\iint\limits_D \sqrt{xy} \,dx\,dy}$, де ${D}$ --- область між графіками функцій ${y = x^2}$ та ${y = 2x}$.
@@ -9,9 +9,33 @@
 \item Знайдіть ${\iint\limits_D \left(\sqrt{x} + \sqrt{y}\right) \,dx\,dy}$, де ${D}$ --- область, заключена між кривими ${y = x^2}$ і ${x = y^2}$.
 \item Розрахуйте ${\iint\limits_R  (x +y)^{2} \,dx\,dy}$, де ${R}$ --- область між кривими ${y = x^3}$ та ${x = y^3}$.
   \item Знайдіть подвійний інтеграл: $\iint\limits_R x^2y\,dx\,dy$, де область $R$ --- трикутник з вершинами $(0,0)$, $(1,0)$ і $(1,2)$.
-  \item Обчисліть: $\iint\limits_D e^{x+y}\,dx\,dy$, де область $D$ --- трикутник з вершинами $(0,0)$, $(2,0)$ і $(1,1)$.
-  \item Знайдіть: $\iint\limits_R \sin(x+y)\,dx\,dy$, де область $R$ --- трикутник з вершинами $(0,0)$, $(\pi,0)$ і $(0,\pi)$.
-  \item Обчисліть: $\iint\limits_D (x+y)^2\,dx\,dy$, де область $D$ --- трикутник з вершинами $(0,0)$, $(1,0)$ і $(1,1)$.
+  \item Обчисліть: $\iint\limits_D e^{x+y}\,dx\,dy$, де $D$ --- трикутник з вершинами $(0,0)$, $(2,0)$ і $(1,1)$.
+  \item Знайдіть: $\iint\limits_R \cos(x+y)\,dx\,dy$, де область $R$ --- трикутник з вершинами $(0,0)$, $(\pi,0)$ і $(0,\pi)$.
+  \item Обчисліть: $\iint\limits_D (x+y)^2\,dx\,dy$, де $D$ --- трикутник з вершинами $(0,0)$, $(1,0)$ і $(1,1)$.
+  \item Обчисліть: $\iint\limits_D \frac{x}{x^2+y^2}\,dx\,dy$, де $D$ --- область між лініями ${y = x}$, ${y = x\tg x}$, ${x = \frac{\pi}{8}}$ та ${x = \frac{\pi}{4}}$.
+  \item Обчисліть: $\iint\limits_D x^2\sin(4 x y)\,dx\,dy$, де $D$ --- область між лініями ${x = 4y}$, ${x = \sqrt{2\pi}}$ та ${y = 0}$.
+  \item Обчисліть: $\iint\limits_D \frac{y}{x^2 + 1}\,dx\,dy$, де $D$ --- область між лініями ${y = x^2}$ та ${y = 3 - x^2}$.
+  \item Обчисліть: $\iint\limits_D \sqrt{x^{2}-y^{2}}\,dx\,dy$, де $D$ --- область між лініями ${x = 1}$, ${y = x}$ та ${y = -x}$.
+  \item Обчисліть: $\iint\limits_D \left({\mathrm e}^{y}+x\right)\,dx\,dy$, де $D$ --- область між лініями ${x = 2}$, ${y = 0}$ та ${y = \ln(x)}$.
+  \item ${ \iint\limits_D \left(x^2 + y^2\right) \,dx \,dy }$, де ${ D }$ --- область між кривими ${ y = x^2 }$ та ${ y = 2x }$.
+  \item ${ \iint\limits_D x^2y^3 \,dx \,dy }$, де ${ D }$ --- область між графіками ${ y = x^2 }$ та ${ y = \sqrt{x} }$.
+  \item ${ \iint\limits_D y^2 \,dx \,dy }$, де ${ D }$ --- область між лініями ${ y = x }$, ${ y = x^2 }$, ${x = 1}$ та ${ x = 2 }$.
+  \item ${ \iint\limits_D \frac{x}{\left(y+1\right)^{2}} \,dx \,dy }$, де ${ D }$ --- область між лініями ${ y = x }$, ${ y = \frac{x}{2} }$, ${x = 2}$ та ${ x = 4 }$.
+  \item ${ \iint\limits_D (x + 1) \,dx \,dy }$, де ${ D }$ --- область між лініями ${ y = \sin x }$, ${ y = \cos x }$, ${x = 0}$ та ${ x = \frac{\pi}{4} }$.
+  \item ${ \iint\limits_D (y + 1) \,dx \,dy }$, де ${ D }$ --- область між лініями ${ y = \sin x }$, ${ y = \cos x }$, ${x = 0}$ та ${ x = \frac{\pi}{4} }$.
+  \item ${ \iint\limits_D \frac{1}{1+x+y} \,dx \,dy }$, де ${ D }$ --- область обмежена лініями ${ x + y = 1 }$, ${ x = 0 }$ та ${ y = 0 }$.
+  \item ${ \iint\limits_D \ln(xy) \,dx \,dy }$, де ${ D }$ --- область обмежена лініями ${ x = 1 }$, ${ y = 1 }$ та ${ y = \frac{2}{x} }$.
+  \item ${ \iint\limits_D \\frac{y}{x+1} \,dx \,dy }$, де ${ D }$ --- область між кривими ${ y = x }$ та ${ y = \sqrt{x} }$.
+
+\item ${ \iint\limits_D \frac{x}{1+xy} \,dx \,dy }$, де ${ D }$ --- область обмежена лініями ${ xy = 1 }$, ${ x = 1 }$ та ${ y = 2 }$.
+
+\item ${ \iint\limits_D \sin(x^2+y^2) \,dx \,dy }$, де ${ D }$ --- область обмежена кругом ${ x^2 + y^2 = 2 }$.
+
+\item ${ \iint\limits_D \frac{x}{y^2} \,dx \,dy }$, де ${ D }$ --- область поза кругом ${ x^2 + y^2 = 1 }$ та всередині кола ${ x^2 + y^2 = 4 }$.
+
+\item ${ \iint\limits_D e^{xy} \,dx \,dy }$, де ${ D }$ --- область між кривими ${ y = x^2 }$ та ${ y = e^x }$.
+
+
 \item
 \item
 \item
